# MS6

.github/workflows/: ms6.yml
MS/: .coveragerc  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  sonar-project.properties
MS/src/: main.py  schemas.py
MS/src/api/: route.py
MS/src/config/: thresholds.py
MS/src/domain/: classifier.py  validator.py
MS/tests/: test_validator.py
